cdbs (0.4.56) UNRELEASED; urgency=low

  * Simplify logic in autotools, makefile and debhelper snippets:
    $(if A,A,B) -> $(or A,B).
  * Tighten debhelper.mk build-dependency hint for debhelper.  Closes:
    bug#522613, thanks to Adam D. Barratt and Russ Allbery.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 31 Mar 2009 11:45:22 +0200

cdbs (0.4.55) unstable; urgency=low

  * Fix python-distutils.mk remove python-module-stamp dir in clean
    target.  Closes: bug#521568, thanks to Tristan Seligmann.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 28 Mar 2009 21:10:01 +0100

cdbs (0.4.54) unstable; urgency=low

  * Adjust buildcore.mk to not rely on specific inclusion order of
    debhelper.mk.  Closes: bug#489430 (for real this time), thanks to
    Martin Koeppe for insisting.
  * Introduce new variable DEB_PYTHON_MODULE_PACKAGES, and properly
    deprecate DEB_PYTHON_MODULE_PACKAGE (instead of just dropping it, as
    was done in 0.4.53).  Add NEWS entry.  This closes: bug#521180,
    thanks to Marc Dequènes.
  * Fix distutils tests to use new DEB_PYTHON_MODULE_PACKAGES.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 28 Mar 2009 10:41:05 +0100

cdbs (0.4.53) unstable; urgency=low

  [ Jonas Smedegaard ]
  * Relax python-central build-dependency to >= 0.5.6 in python-distutils
    class (instruction in python policy is only really needed for
    transition of python-central itself, which has now completed).
  * Adjust perlmodule.mk to not rely on specific inclusion order of cdbs
    files.  Closes: bug#489430, thanks to Martin Koeppe.
  * Drop bogus phrase about ordered relation between debhelper.mk and
    perl.mk in documentation.
  * Run dh_pycentral/dh_pysupport before dh_installinit.  Closes:
    bug#494288, thanks to Guido Günther.
  * Add support for debhelper level 7 (debhelper.mk):
    - Add new option DEB_DH_PREP. At levels <= 7 "dh_clean -k" is used
      by default, at newer levels "dh_prep" is used
    - Support level 7 in CDBS_BUILD_DEPENDS